--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-progress": "^4.1.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-switch-selector": "^2.1.4",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
