--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-actions-sheet": "^0.4.2",
+    "react-native-calendars": "^1.1267.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.7.2",
     "react-native-progress": "^4.1.2",
@@ -42,6 +43,8 @@
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-preset-expo": "^8.4.1",
     "jest-expo": "^42.0.0",
     "typescript": "~4.0.0"
   },
