--- a/package.json
+++ b/package.json
@@ -12,42 +12,43 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
-    "@react-native-community/datetimepicker": "3.5.2",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.8.0",
-    "@react-navigation/native": "^5.7.3",
-    "@react-navigation/stack": "^5.9.0",
-    "expo": "^42.0.0",
-    "expo-asset": "~8.3.3",
-    "expo-constants": "~11.0.1",
-    "expo-font": "~9.2.1",
-    "expo-linking": "~2.3.1",
-    "expo-splash-screen": "~0.11.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-web-browser": "~9.2.0",
+    "@react-native-masked-view/masked-view": "^0.2.6",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "expo": "^45.0.0",
+    "expo-asset": "~8.5.0",
+    "expo-constants": "~13.1.1",
+    "expo-font": "~10.1.0",
+    "expo-linking": "~3.1.0",
+    "expo-splash-screen": "~0.15.1",
+    "expo-status-bar": "~1.3.0",
+    "expo-web-browser": "~10.2.0",
     "lodash": "^4.17.21",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-actions-sheet": "^0.4.2",
-    "react-native-calendars": "^1.1267.0",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-paper": "^4.7.2",
-    "react-native-progress": "^4.1.2",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-switch-selector": "^2.1.4",
-    "react-native-web": "~0.13.12"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-actions-sheet": "^0.6.1",
+    "react-native-calendars": "^1.1284.0",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-paper": "^4.12.1",
+    "react-native-progress": "^5.0.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-switch-selector": "^2.2.1",
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.67.6",
     "babel-plugin-module-resolver": "^4.1.0",
-    "babel-preset-expo": "^8.4.1",
-    "jest-expo": "^42.0.0",
-    "typescript": "~4.0.0"
+    "babel-preset-expo": "~9.1.0",
+    "jest-expo": "^45.0.0",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
