--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@miblanchard/react-native-slider": "^2.1.0",
     "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-masked-view/masked-view": "^0.2.6",
@@ -38,6 +39,7 @@
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-svg": "^12.3.0",
     "react-native-switch-selector": "^2.2.1",
     "react-native-web": "0.17.7"
   },
