--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@rneui/base": "^4.0.0-rc.6",
+    "@rneui/themed": "^4.0.0-rc.6",
     "expo": "^45.0.0",
     "expo-asset": "~8.5.0",
     "expo-constants": "~13.1.1",
